@@ -98,6 +98,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Marton Suranyi
   Nicolas Appriou
   Jochen Sprickerhof
+  Alexander Sulfrian
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
