@@ -15,6 +15,8 @@ Bugs
  + #1473 Make TASK_RCDIR customizable (thanks to Elias Probst).
  + #1486 Truncated sentence in task-sync(5) manpage (thanks to Jakub Wilk).
  + #1487 `tasksh` segmentation fault (thanks to Hector Arciga).
+ + Added certificate verification to GnuTLS versions < 2.9.10 (thanks to
+   Alexander Sulfrian)
  + Removed debugging code.
 
 ------ current release ---------------------------
